# daggerlib

./: .daggerignore  .dir-locals.el  .gitignore  CLAUDE.md  TECHNICAL.org  check-result.el  dagger.json  export-html-host.sh  export-html.sh  image-pins.json  init-examples-host.sh  init-examples.sh  pyproject.toml  readme.org  reproducibility-helpers.el  run-nodagger.sh  run.el  run.sh  tangle-host.sh  tangle-nodagger.sh  tangle.el  tangle.sh  test-nodagger.sh  test.sh
.claude/: settings.json
.clk/: clk.json
.clk/python/: ralph.py
.github/workflows/: pages.yml  test.yml
dind/: dagger.json  pyproject.toml
doc/: base_containers.org  docker_in_docker.org  flask_application.org  non_root_user.org  production_images.org  python_environment.org
examples/data_pipeline/: transform.py
examples/docker_in_docker/: readme.org
examples/flask_application/: readme.org
examples/log_collector/: collector.py  dagger.json  readme.org  readme.org~
examples/non_root_user/: readme.org
examples/production_images/: readme.org
examples/webhook_receiver/: app.py
src/: alpine.org  debian.org  dev.org  dind.org  distroless.org  flask_venv.org  main.org  pip_tools.org  python.org  ralph.org  ralph.yml  user.org
tests/: alpine.sh  conftest.py  dagger  debian.sh  dind.sh  distroless.sh  doc_base_containers.sh  doc_docker_in_docker.sh  doc_flask_application.sh  doc_non_root_user.sh  doc_production_images.sh  doc_python_environment.sh  flask_venv.sh  generate_tests.py  helpers.sh  pip_tools.sh  ralph-log-filter  ralph.sh  ralph_log_sample.txt  test_sdk.py  testing.org  user.sh
(+106 files in other folders)
